Make razor library Java 8 compliant